# Workplace-Tools-

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Qwen_html_20250924_1a7liejpn.html  Qwen_html_20250924_i1wnlye4e.html  Qwen_html_20250924_jm12zaict.html  Qwen_html_20250924_k12ormi2d.html  Qwen_html_20250924_xxuex19de.html  README-auth.md  README.md  auth_sync_dashboard.html  company_data_extraction_tool.html  data-extraction-assistant.html  jest.config.js  mobile_personal_hub-sw.js  mobile_personal_hub.html  mobile_work_companion.html  package-lock.json  package.json  requirements-dev.txt  requirements.txt  sentence_case_converter.html  sj-website-checker.html  sw-productivity.js  task_runner.html  title_case_converter_single_file_html (1).html  title_case_converter_single_file_html.html  vercel.json  vitest.config.js  web-productivity-dashboard.html  web_ai_workspace.html  web_extraction_console.html
backend/: Dockerfile  README-extraction.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/api/: extract.py
backend/app/core/: config.py  database.py  logging.py  rate_limit.py  security.py  supabase.py
backend/app/middleware/: auth.py
backend/app/routers/: __init__.py  auth.py  google_calendar.py  protected.py
backend/app/schemas/: auth.py  google.py  user.py
backend/app/services/: google.py  notifications.py  (+4 more)
backend/tests/: conftest.py  test_app.py  test_auth.py  test_extract_api.py  test_google_calendar.py  test_protected.py
(+225 files in other folders)
